# ha-energy-window-tracker

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  README.md  YANKED.md  hacs.json  info.md  pyproject.toml  release-please-config.json  requirements_test.txt
.github/workflows/: pytest.yml  ruff.yml  test.yml
custom_components/energy_offpeak/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/energy_offpeak/translations/: en.json
custom_components/energy_tracker/: manifest.json
custom_components/energy_window_tracker/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/energy_window_tracker/translations/: en.json
custom_components/energy_window_tracker_beta/: manifest.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_edge_cases.py  test_init.py  test_logging.py  test_sensor.py
