[project]
name = "ha-energy-tracker"
version = "0.0.0"
description = "Home Assistant custom integration: Energy Window Tracker"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [".git", "__pycache__", ".release-please"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
