[project]
name = "ha-energy-tracker"
version = "2.3.5"  # x-release-please-version
description = "Home Assistant custom integration: Energy Window Tracker"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".git", "__pycache__", ".release-please"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
